# ocaml-playlist-transfer

./: .gitignore  dune-project  ocaml_playlist_transfer.opam
_build/: .db  .digest-db  log
_build/default/: ocaml_playlist_transfer.dune-package  ocaml_playlist_transfer.install
lib/: dune
lib/apple/: apple_error.ml  apple_request.ml  apple_rest_client.ml  artwork.ml  auth.ml  auth.mli  authorization.ml  authorization.mli  brainstorming.ml  client.ml  description.ml  dune  error.ml  error.mli  jwt.ml  jwt.mli  library_music_video.ml  library_playlist.ml  library_song.ml  music_video.ml  page.ml  play_params.ml  playlist.ml  playlist.mli  relationship.ml  resource.ml  song.ml  song.mli  test.ml  types.ml
lib/async/: async.ml  async.mli  dune  promise.ml
lib/beatbridge/: beatbridge.ml  client.ml  dune  transfer_report.ml  utils.ml
lib/common/: common.ml  dune
lib/error/: dune  error.ml  error.mli
lib/extended/: dune  extended.ml
lib/http/: dune  http.ml  http.mli  redirect_server.ml
lib/playlist_transfer/: dune  playlist_transfer.ml  playlist_transfer.mli
lib/redirect_server/: dune  redirect_server.ml  redirect_server.mli
lib/rest_client/: dune  rest_client.ml
lib/services/: apple.ml  dune  music_service.ml  spotify.ml  spotify.mli
lib/shared/: dune  error.ml  error.mli  extended.ml  http.mli  pagination.ml  request.ml  rest_client.ml  shared.ml  syntax.ml
lib/songstorm/: auth.ml  dune  songstorm.ml  songstorm.mli
lib/spotify/: access_token.ml  access_token.mli  album.ml  (+66 more)
lib/spotify-old/: dune  playlist.ml  track.ml  user.ml  user.mli
test/: dune
(+72 files in other folders)
